2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	Import Debian patch 487_passwd_chauthtok_failed_message
	* libmisc/pam_pass.c: Be more verbose and indicate that the
	password was not changed when pam_chauthtok fails (in addition to
	the PAM error, which may not be comprehensible for the users).

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	Import Debian patch 434_login_stop_checking_args_after--
	* NEWS, src/login.c (check_flags): Stop checking the arguments
	after --. The later options will be sent to the shell, and do not
	need to be checked.

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c, src/su.c, src/newgrp.c: Harmonize the children's
	SIGSTOP handling. Raise the signal which stopped the child instead
	of always SIGSTOP.

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	Import Debian patch 406_vipw_resume_properly.
	Thanks to Dean Gaudet.
	* NEWS, src/vipw.c: Resume properly after ^Z.

2008-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.c, lib/lockpw.c, lib/utent.c, lib/sgetgrent.c,
	lib/getdef.h, lib/pwauth.c, lib/sgetspent.c, lib/pwauth.h,
	lib/port.c, lib/encrypt.c, lib/groupio.c, lib/shadowmem.c,
	lib/port.h, lib/groupio.h, lib/groupmem.c, lib/exitcodes.h,
	lib/gshadow.c, lib/gshadow_.h, lib/sgroupio.c, lib/sgroupio.h,
	lib/shadowio.c, lib/pwio.c, lib/sgetpwent.c, lib/commonio.c,
	lib/faillog.h, lib/shadowio.h, lib/pwio.h, lib/pam_defs.h,
	lib/pwmem.c, lib/commonio.h, lib/shadow.c, lib/fputsx.c,
	lib/prototypes.h, libmisc/xmalloc.c, libmisc/limits.c,
	libmisc/entry.c, libmisc/console.c, libmisc/ulimit.c,
	libmisc/xgetXXbyYY.c, libmisc/chkname.c, libmisc/pwd2spwd.c,
	libmisc/xgetpwnam.c, libmisc/basename.c, libmisc/chkname.h,
	libmisc/chowndir.c, libmisc/audit_help.c, libmisc/chowntty.c,
	libmisc/hushed.c, libmisc/xgetpwuid.c, libmisc/getdate.h,
	libmisc/addgrps.c, libmisc/xgetgrgid.c, libmisc/utmp.c,