@@ -22,6 +22,9 @@ shadow-4.1.1 -> shadow-4.1.2						UNRELEASED
 - vipw
   * Resume properly after ^Z.
 
+*** documentation:
+- Document the -r, --system option in the useradd manpage.
+
 shadow-4.1.0 -> shadow-4.1.1						02-04-2008
 
 *** general:
